Add industrial resilience demos